Fixed spacing on page

--- a/style.css
+++ b/style.css
@@ -43,9 +43,7 @@ body {
 }
 
 .background {
-	background:
-		url("images/background-2.jpg")
-		repeat;
+	background:url("images/background-2.jpg") repeat;
 	background-size: 100% auto;
 	position: fixed;
 	width: 100%;
@@ -111,6 +109,10 @@ background-color: #fff;
 	color: #e4e4e4;
 }
 
+.navbar {
+	margin-bottom: 0;
+}
+
 #static-wrapper {
 	background-color: white;
 	border-bottom: 1px solid #EEEEEE;
@@ -143,8 +145,8 @@ background-color: #fff;
 #page-container {
 	background-color: #f8f8f8;
 	border-top: 1px solid #e7e7e7;
-	margin-top: 10px;
-	margin-bottom: 10px;
+	margin: 20px 0 20px;
+	padding: 15px;
 }
 
 .clear {
